# bm25_vectorizer

./: .pre-commit-config.yaml  LICENSE  README.md  bm25_vectorizer.py  pyproject.toml  requirements.txt  setup.py
bm25_vectorizer/: __init__.py
examples/: 1_retrieve.py  2_match.py  3_both.py
tests/: test_bm25.py
